--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A web app to merge multiple xopp files.",
   "main": "index.mjs",
   "scripts": {
-    "start": "node index.mjs"
+    "start": "node index.mjs",
+    "dev": "nodemon index.mjs"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/MrPancakes39/xopp-merger-app/issues"
   },
-  "homepage": "https://github.com/MrPancakes39/xopp-merger-app#readme"
+  "homepage": "https://github.com/MrPancakes39/xopp-merger-app#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.19"
+  }
 }
