Added Basic Components To The WebApp

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "keywords": [
     "Xournal++",
     "xopp",
-    "web-app"
+    "web-app",
+    "xopp-merger-app"
   ],
   "author": "Salman Hasan",
   "license": "MIT",
