--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "fast-xml-parser": "^4.0.10"
   }
